collada export is wrong when done through the API #50923

Closed
opened 2017-03-12 10:03:34 +01:00 by mathieu menuet · 6 comments

System Information
All vendors

Blender Version
Broken: latest master

Short description of error
When exporting models through the API, the file created are smaller and make other program crash when trying to import. The exact same objects with the exact same export settings exported through the UI is bigger and import flawlessly in other programs.

Exact steps for others to reproduce the error
Run this script on any file with at least one object selected (like the startup scene with default cube) and try to import the created file (created in the temp folder) in another program like sketchup, it crashes. Blender can import such file.

import bpy

path = bpy.context.user_preferences.filepaths.temporary_directory + "test" +".dae"
bpy.context.scene.collada_export(filepath=path, apply_modifiers=True, export_mesh_type=0, selected=True, include_children=False, include_armatures=False, include_shapekeys=False, deform_bones_only=False, active_uv_only=False, include_uv_textures=True, include_material_textures=True, use_texture_copies=True, use_ngons=False, use_object_instantiation=True, use_blender_profile=False, sort_by_name=False, open_sim=False, export_transformation_type=0)

export the same object(s) through the UI,. Note that the file is bigger and it import flawlessly in other programs.

**System Information** All vendors **Blender Version** Broken: latest master **Short description of error** When exporting models through the API, the file created are smaller and make other program crash when trying to import. The exact same objects with the exact same export settings exported through the UI is bigger and import flawlessly in other programs. **Exact steps for others to reproduce the error** Run this script on any file with at least one object selected (like the startup scene with default cube) and try to import the created file (created in the temp folder) in another program like sketchup, it crashes. Blender can import such file. ``` import bpy path = bpy.context.user_preferences.filepaths.temporary_directory + "test" +".dae" bpy.context.scene.collada_export(filepath=path, apply_modifiers=True, export_mesh_type=0, selected=True, include_children=False, include_armatures=False, include_shapekeys=False, deform_bones_only=False, active_uv_only=False, include_uv_textures=True, include_material_textures=True, use_texture_copies=True, use_ngons=False, use_object_instantiation=True, use_blender_profile=False, sort_by_name=False, open_sim=False, export_transformation_type=0) ``` export the same object(s) through the UI,. Note that the file is bigger and it import flawlessly in other programs.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bliblubli

Added subscriber: @bliblubli
Gaia Clary was assigned by mathieu menuet 2017-03-12 10:04:17 +01:00

This issue was referenced by b759d3c9c5

This issue was referenced by b759d3c9c57683114ae8ff91acea4c29b6afb47e
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Hi John;
Thank you for reporting.

The main issue here is that we have some duplication of code which is very likely to deviate. But this will be cleaned up for 2.8 anyways.

cheers,
Gaia

Hi John; Thank you for reporting. The main issue here is that we have some duplication of code which is very likely to deviate. But this will be cleaned up for 2.8 anyways. cheers, Gaia
Author

thanks for the very quick fix :)

thanks for the very quick fix :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50923
No description provided.