fix T50923: Inconsistent default values and wrong order of parameters in api call